# Ubuntu20.04-VMware

./: .gitignore  README.md  记录.txt
Webserver/: a.out  test.c
Webserver/lesson02/: test  test.c  test.i  test.s
Webserver/lesson03/: test  test.c
Webserver/lesson07/: Makefile  Makefile1  Makefile2  Makefile3  Makefile4  app
Webserver/lesson08/: bubble.cpp  main  sort.h  test
Webserver/lesson09/: create  create.c  open  open.c
Webserver/lesson10/: copy  copyfile.c
Webserver/lesson11/: lseek  lseek.c
Webserver/lesson12/: ls  ls-l.c  stat  stat.c
Webserver/lesson13/: a.out  access  access.c  chmod  chmod.c  truncate  truncate.c
Webserver/lesson14/: chdir  chdir.c  mkdir  mkdir.c  rename  rename.c
Webserver/lesson15/: readFileNum  readFileNum.c
Webserver/lesson16/: dup  dup.c  dup2  dup2.c
Webserver/lesson17/: 1.txt  fnctl  fnctl.c
Webserver/lesson18/: fork  fork.c  hello  hello.c
Webserver/lesson19/: execl  execl.c  execlp  execlp.c  hello
Webserver/lesson20/: a.out  exit  exit.c  orphan  orphan.c  zombie  zombie.c
Webserver/lesson21/: wait  wait.c  waitpid  waitpid.c
Webserver/lesson22/: fpathconf  fpathconf.c  noblock  nonblock  nonblock.c  parent-child-ipc  parent-child-ipc.c  pipe  pipe.c  管道读写的特点.txt
Webserver/lesson23/: mkfifo  mkfifo.c  read  write  write.c
Webserver/lesson24/: a  b  chatA.c
Webserver/lesson25/: a.out  copy  copy.c  mmap-anon.c  mmap-parent-child-ipc.c  test.txt  内存映射的注意事项.txt
Webserver/lesson26/: a.out  alarm  alarm.c  alarm1  alarm1.c  core.a.out.9802  core.c  kill  kill.c  setitimer.c  signal  signal.c  sigset  sigset.c  阻塞信号集和未决信号集.txt
Webserver/lesson28/: a.out  daemon  daemon.c  time.txt
Webserver/lesson29/: pthread_attr  pthread_attr.c  pthread_cancel  pthread_cancel.c  pthread_create  pthread_create.c  pthread_detach  pthread_detach.c  pthread_exit  pthread_exit.c  pthread_join  pthread_join.c
Webserver/lesson30/: cond  cond.c  deadlock  deadlock.c  deadlock1  deadlock1.c  mutex  mutex.c  prodcust  prodcust.c  rwlock  rwlock.c  selltickets  selltickets.c  semaphore  semaphore.c
clionProject/: CMakeLists.txt
clionProject/test/: CMakeLists.txt  main.cpp
pythonProject/: test.py
pythonProject/Python_Learning/02_Python入门语法/: 01_Python中的字面量.py  02_Python中的注释.py  03_Python中的变量.py  04_Python中的数据类型.py  05_Python中的数据类型转换.py  06_Python中的标识符.py  07_Python中的运算符.py  08_字符串的多种定义方式.py  09_Python中的字符串拼接.py  10_Python中的字符串格式化.py  11_Python中的字符串格式化的精度控制.py  12_Python中的字符串格式化的方法2.py  13_Python中对表达式进行格式化.py  14_字符串格式化练习.py  15_Python中的数据输入语句.py  16_Python中的布尔类型和比较运算符.py  17_Python中的if语句基本格式.py  18_成年人判断练习.py  1960~2019全球GDP前8国家  1960~2019全球GDP前8国家.html  19_Python中ifelse语句的使用.py  20_我要买票吗练习.py  21_Python中的if_elif_else语句的使用.py  22_猜猜心里数字.py  23_Python中判断语句的嵌套.py  24_判断语句综合案例.py  25_Python中的while循环的基础应用.py  26_求1-100的和练习.py  27_while循环猜数字练习.py  28_Python中的while循环的嵌套应用.py  29_while循环的应用—九九乘法表.py  30_Python中的for循环的基本语法.py  31_for循环案例—数一数有几个a.py  32_Python中的range语句.py  33_Python中的for循环变量临时作用域.py  34_Python中的for循环的嵌套使用.py  35_Python中的for循环打印九九乘法表.py  36_Python中的循环中断.py  37_循环综合案例.py  38_Python中的函数初体验.py  (+63 more)
pythonProject/Python_Learning/03_Python第三阶段/: 100_Python中的魔术方法.py  101_Python中的封装.py  101_封装的课后练习.py  102_Python中的继承.py  103_Python中的复写父类成员和调用父类成员.py  104_Python中的变量的类型注释.py  105_Python中的函数和方法类型注释.py  106_Python中的Union联合类型注释.py  107_Python中的多态.py  95_Python中的初识对象.py  96_Python中的类的成员方法.py  97_Python中的类和对象.py  98_Python中的构造方法.py  99_构造方法课后练习.py  test.py
pythonProject/Python_Learning/my_package_83/: __init__.py  my_module1_83.py  my_module2_83.py
pythonProject/Python_Learning/my_utils_84/: file_util.py  str_util.py
workspace/: 成功版ros+qt-CMakelists.txt
workspace/CMake_ws/: CMakeLists.txt
workspace/CMake_ws/Calculator/: CMakeLists.txt
workspace/Shell_ws/: different.sh  shell01.sh  special_var.sh  test1.txt
workspace/VsCode_ws/CALC/: CMakeLists.txt
workspace/VsCode_ws/CALC_1/: CMakeLists.txt
workspace/VsCode_ws/CALC_2/: CMakeLists.txt
workspace/VsCode_ws/CALC_3/: CMakeLists.txt
workspace/VsCode_ws/CALC_4/: CMakeLists.txt
workspace/VsCode_ws/CALC_5/: CMakeLists.txt
workspace/VsCode_ws/test/: CMakeLists.txt
workspace/qt_ros_ws/demo02_ws/src/demo/: CMakeLists.txt
workspace/qt_ros_ws/demo02_ws/src/demo/src/: mainwindow.cpp  mainwindow.h  mainwindow.ui  view.cpp  view.h  view.ui
workspace/vegetable_ws/: serialport4.sh  start.sh  start_serial.sh  test_autowork.sh
workspace/vegetable_ws/devel/: .catkin  .rosinstall  (+2 more)
(+822 files in other folders)
